tests/asm-link/modzero-instr/rgbasm.err
error: division by zero
   ╭─[ test.asm:2:13 ]
   │
 2 │     ld  a, 1 % 0
   │                ┬  
   │                ╰── this is equal to zero
───╯
1 error generated.
